Correct settings for HL_LHC collision.

--- a/examples/hl_lhc_collision/reference/fc.3
+++ b/examples/hl_lhc_collision/reference/fc.3
@@ -186,12 +186,6 @@ mbrs.5l4.b1..1      1.7000000000e+01    3.9290102699e-01
    0.   1.   0.   0.
 NEXT
 MULT
-mcbrdh.4l5.b1..r    1.7000000000e+01    1.0000000000e+03
-   0.   0.   0.   0.
-   0.   0.   0.   0.
-   0.   1.   0.   1.
-NEXT
-MULT
 mbrd.4l5.b1..1      1.7000000000e+01    3.7462702335e-01
    0.   0.   0.   0.
    0.   0.   0.   0.
@@ -244,6 +238,23 @@ mctxf.3l5           1.7000000000e+01    1.0000000000e+03
    0.   0.   0.   0.
    0.   0.   0.   0.
    0.   1.   0.   0.
+NEXT
+MULT
+mqxfa.b3l5..fl      1.7000000000e+01    1.0000000000e+03
+   0.   0.   0.   0.
+   0.   0.   0.   0.
+   0.   0.   0.   0.
+   0.   0.   0.   0.
+   0.   0.   0.   0.
+   0.   1.   0.   1.
+   0.   0.   0.   0.
+   0.   0.   0.   0.
+   0.   0.   0.   0.
+   0.   1.   0.   1.
+   0.   0.   0.   0.
+   0.   0.   0.   0.
+   0.   0.   0.   0.
+   0.   1.   0.   1.
 NEXT
 MULT
 q_c6t_419           1.7000000000e+01    1.0000000000e+03
