--- a/python_examples/ions_python/simple_checks.ipynb
+++ b/python_examples/ions_python/simple_checks.ipynb
@@ -454,6 +454,207 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run 3, IR7 strengths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command_log_file='log_run3.madx'\n",
+    "stdout_file='stdout_run3.madx'\n",
+    "Madx_run3 = pm.Madxp\n",
+    "with open(stdout_file, 'w') as myFile:\n",
+    "    mad_run3 = Madx_run3(stdout=myFile,command_log=command_log_file)\n",
+    "    \n",
+    "\n",
+    "mad_run3.input('''\n",
+    "Option,  warn,info;\n",
+    "System,\"rm -rf temp\";\n",
+    "System,\"mkdir temp\";\n",
+    "\n",
+    "system,\"ln -fns /afs/cern.ch/eng/lhc/optics/runII optics_runII\";\n",
+    "system,\"ln -fns /afs/cern.ch/eng/lhc/optics/runIII optics_runIII\";\n",
+    "\n",
+    "call, file=\"optics_runII/2018/lhc_as-built.seq\";\n",
+    "call, file=\"optics_runIII/RunIII_dev/IR7-Run3seqedit.madx\";\n",
+    "\n",
+    "call, file=\"optics_runII/2018/ION/opticsfile.21\";\n",
+    "call, file=\"./ir7_strengths.madx\";\n",
+    "\n",
+    "beam, particle=ion,sequence=lhcb1,\n",
+    "        energy=574000.0,\n",
+    "        sigt=0.0824,\n",
+    "        bv=1,\n",
+    "        npart=180000000.0,\n",
+    "        sige=0.000102,\n",
+    "        ex=5.567661977351915e-10,\n",
+    "        ey=5.567661977351915e-10,\n",
+    "        mass = 193.68715,\n",
+    "        charge=82;\n",
+    "\n",
+    "beam, particle=ion,sequence=lhcb2,\n",
+    "        energy=574000.0,\n",
+    "        sigt=0.0824,\n",
+    "        bv=-1,\n",
+    "        npart=180000000.0,\n",
+    "        sige=0.000102,\n",
+    "        ex=5.567661977351915e-10,\n",
+    "        ey=5.567661977351915e-10,\n",
+    "        mass = 193.68715,\n",
+    "        charge=82;\n",
+    "    \n",
+    "\n",
+    "use, sequence=lhcb1;\n",
+    "select, flag=twiss, clear;\n",
+    "twiss,chrom,file=\"twiss.b1.tfs\";\n",
+    "\n",
+    "''')\n",
+    "\n",
+    "twiss_run3 = mad_run3.get_twiss_df(table_name='twiss')\n",
+    "summ_run3  = mad_run3.table.summ.dframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Betas:\n",
+      "0.5000007444611037 0.5000005376452763 0.5000007855342002 1.5000027113416987\n",
+      "\n",
+      "Tunes:\n",
+      "62.30999961054176 60.32000008613991 1.9262509383111137 1.5922283722602515\n",
+      "\n",
+      "Chroma:\n",
+      "1.9262509383111137 1.5922283722602515\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Betas:')\n",
+    "print(twiss_run3.loc['ip1:1'].betx, twiss_run3.loc['ip2:1'].betx, twiss_run3.loc['ip5:1'].betx, twiss_run3.loc['ip8:1'].betx)\n",
+    "print()\n",
+    "print('Tunes:')\n",
+    "print(summ_run3['q1'].values[0], summ_run3['q2'].values[0], summ_run3['dq1'].values[0], summ_run3['dq2'].values[0])\n",
+    "print()\n",
+    "print('Chroma:')\n",
+    "print(summ_run3['dq1'].values[0], summ_run3['dq2'].values[0])\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "command_log_file='log_run3_thin.madx'\n",
+    "stdout_file='stdout_run3_thin.madx'\n",
+    "Madx_run3_thin = pm.Madxp\n",
+    "with open(stdout_file, 'w') as myFile:\n",
+    "    mad_run3_thin = Madx_run3_thin(stdout=myFile,command_log=command_log_file)\n",
+    "    \n",
+    "\n",
+    "mad_run3_thin.input('''\n",
+    "Option,  warn,info;\n",
+    "System,\"rm -rf temp\";\n",
+    "System,\"mkdir temp\";\n",
+    "\n",
+    "system,\"ln -fns /afs/cern.ch/eng/lhc/optics/runII optics_runII\";\n",
+    "\n",
+    "call, file=\"optics_runII/2018/lhc_as-built.seq\";\n",
+    "call, file=\"optics_runIII/RunIII_dev/IR7-Run3seqedit.madx\";\n",
+    "\n",
+    "slicefactor=8;\n",
+    "call, file=\"optics_runII/2018/toolkit/myslice.madx\";\n",
+    "beam;\n",
+    "use, sequence=lhcb1; makethin,sequence=lhcb1, style=teapot, makedipedge=true;\n",
+    "use, sequence=lhcb2; makethin,sequence=lhcb2, style=teapot, makedipedge=true;\n",
+    "seqedit, sequence=lhcb1; flatten;cycle, start=IP3; flatten; endedit;\n",
+    "seqedit, sequence=lhcb2; flatten;cycle, start=IP3; flatten; endedit;\n",
+    "\n",
+    "\n",
+    "call, file=\"optics_runII/2018/ION/opticsfile.21\";\n",
+    "call, file=\"./ir7_strengths.madx\";\n",
+    "\n",
+    "beam, particle=ion,sequence=lhcb1,\n",
+    "        energy=574000.0,\n",
+    "        sigt=0.0824,\n",
+    "        bv=1,\n",
+    "        npart=180000000.0,\n",
+    "        sige=0.000102,\n",
+    "        ex=5.567661977351915e-10,\n",
+    "        ey=5.567661977351915e-10,\n",
+    "        mass = 193.68715,\n",
+    "        charge=82;\n",
+    "\n",
+    "beam, particle=ion,sequence=lhcb2,\n",
+    "        energy=574000.0,\n",
+    "        sigt=0.0824,\n",
+    "        bv=-1,\n",
+    "        npart=180000000.0,\n",
+    "        sige=0.000102,\n",
+    "        ex=5.567661977351915e-10,\n",
+    "        ey=5.567661977351915e-10,\n",
+    "        mass = 193.68715,\n",
+    "        charge=82;\n",
+    "    \n",
+    "\n",
+    "use, sequence=lhcb1;\n",
+    "select, flag=twiss, clear;\n",
+    "twiss,chrom,file=\"twiss.b1.tfs\";\n",
+    "\n",
+    "''')\n",
+    "\n",
+    "twiss_run3_thin = mad_run3_thin.get_twiss_df(table_name='twiss')\n",
+    "summ_run3_thin  = mad_run3_thin.table.summ.dframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Betas:\n",
+      "0.5000007444611037 0.5000005376452763 0.5000007855342002 1.5000027113416987\n",
+      "\n",
+      "Tunes:\n",
+      "62.30999961054176 60.32000008613991 1.9262509383111137 1.5922283722602515\n",
+      "\n",
+      "Chroma:\n",
+      "1.9262509383111137 1.5922283722602515\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Betas:')\n",
+    "print(twiss_run3.loc['ip1:1'].betx, twiss_run3.loc['ip2:1'].betx, twiss_run3.loc['ip5:1'].betx, twiss_run3.loc['ip8:1'].betx)\n",
+    "print()\n",
+    "print('Tunes:')\n",
+    "print(summ_run3['q1'].values[0], summ_run3['q2'].values[0], summ_run3['dq1'].values[0], summ_run3['dq2'].values[0])\n",
+    "print()\n",
+    "print('Chroma:')\n",
+    "print(summ_run3['dq1'].values[0], summ_run3['dq2'].values[0])\n",
+    "print()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
