--- a/python_examples/ions_python/simple_checks.ipynb
+++ b/python_examples/ions_python/simple_checks.ipynb
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -631,26 +631,26 @@
      "output_type": "stream",
      "text": [
       "Betas:\n",
-      "0.5000007444611037 0.5000005376452763 0.5000007855342002 1.5000027113416987\n",
+      "0.5000060926221855 0.5000014266725222 0.5000328820668067 1.500083765357419\n",
       "\n",
       "Tunes:\n",
-      "62.30999961054176 60.32000008613991 1.9262509383111137 1.5922283722602515\n",
+      "62.30997841185369 60.3199386171295 1.848955136551922 1.5534300601416362\n",
       "\n",
       "Chroma:\n",
-      "1.9262509383111137 1.5922283722602515\n",
+      "1.848955136551922 1.5534300601416362\n",
       "\n"
      ]
     }
    ],
    "source": [
     "print('Betas:')\n",
-    "print(twiss_run3.loc['ip1:1'].betx, twiss_run3.loc['ip2:1'].betx, twiss_run3.loc['ip5:1'].betx, twiss_run3.loc['ip8:1'].betx)\n",
+    "print(twiss_run3_thin.loc['ip1:1'].betx, twiss_run3_thin.loc['ip2:1'].betx, twiss_run3_thin.loc['ip5:1'].betx, twiss_run3_thin.loc['ip8:1'].betx)\n",
     "print()\n",
     "print('Tunes:')\n",
-    "print(summ_run3['q1'].values[0], summ_run3['q2'].values[0], summ_run3['dq1'].values[0], summ_run3['dq2'].values[0])\n",
+    "print(summ_run3_thin['q1'].values[0], summ_run3_thin['q2'].values[0], summ_run3_thin['dq1'].values[0], summ_run3_thin['dq2'].values[0])\n",
     "print()\n",
     "print('Chroma:')\n",
-    "print(summ_run3['dq1'].values[0], summ_run3['dq2'].values[0])\n",
+    "print(summ_run3_thin['dq1'].values[0], summ_run3_thin['dq2'].values[0])\n",
     "print()"
    ]
   },
